# landingpage

./: Makefile  db.sqlite3  nixpacks.toml  pyproject.toml  requirements.txt  welcome.css  welcome.html
.trae/documents/: Migração para Design System Sass (Django).md  arquitetura-tecnica-gelartech.md  prd-gelartech-landing-page.md
docs/: deploy.md  prd-landingpage-refrigeracao-2025.md
landing/: admin.py  forms.py  models.py  urls.py  views.py
landing/management/commands/: populate_data.py  setup_admin.py
landing/migrations/: 0001_initial.py  0002_landingcontent_email_landingcontent_endereco_and_more.py  0003_landingcontent_area_atendimento_texto_and_more.py  0004_landingcontent_logo_footer_and_more.py  0005_landingcontent_facebook_url_and_more.py  0006_landingcontent_whatsapp_boas_vindas.py  0007_estatistica.py  0008_alter_landingcontent_contato_descricao.py
landing/templates/landing/: base.html  contato_success.html  index.html
setup/: settings.py  urls.py
static/js/: admin-whatsapp-counter.js  scroll-animations.js
staticfiles/scss/: main.css  main.css.map
theme/static/scss/: _components.scss  _layout.scss  _mixins.scss  _tokens.scss  _utilities.scss  main.scss
theme/static_src/: package-lock.json  package.json
theme/static_src/src/: styles.css
theme/templates/: base.html
